--- a/styles/launchpad.css
+++ b/styles/launchpad.css
@@ -78,25 +78,53 @@ main section{
     margin-bottom: 130px;
 }
 .action{
-    display: flex;
-    justify-content: space-between;
-     padding: 0px 0px;
-     align-items: center;
-     margin-top: 100px;
-     margin-bottom: 100px;
-     
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 60px 20px;
+  gap: 40px;
+  flex-wrap: wrap; 
+
     
 }
-.action-picture{
-    
-    border-radius: 50px;
-    height: 330px;
-    width: 380px;
+.action-image{
+ flex: 1 1 400px;
+  text-align: right;
 }
-.action-content{
-    
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-    
+.action-text{
+  flex: 1 1 400px;
+  padding-right: 20px;  
+}
+.action-image img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 20px;
+  display: inline-block;
+}
+.users {
+  background-color: #4f57f5;    
+  color: white;                
+  text-align: center;
+  padding: 50px 20px;
+  border-radius: 20px;         
+  max-width: 900px;
+  margin: 40px auto;           
+  box-shadow: 0 4px 15px rgba(79, 109, 245, 0.3); 
+}
+.stats {
+  display: flex;
+  justify-content: center;
+  gap: 60px;
+  margin-top: 20px;
+}
+
+.stats div h3 {
+  color: white; 
+  font-size: 40px;
+  margin-bottom: 5px;
+}
+
+.stats div p {
+  font-size: 16px;
+  margin: 0;
 }
