--- a/styles/launchpad.css
+++ b/styles/launchpad.css
@@ -249,7 +249,7 @@ main section{
 footer {
   text-align: center;
   padding: 40px 20px;
-  background-color: #eeeeee;
+  background-color: #d5d6e8;
 }
 
 .logo-size{
